<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".interfaceuser.Principal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            style="@style/titulo2"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:hint="Formulario"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user"
            style="@style/formu"
            android:layout_marginTop="96dp"
            android:drawableLeft="@drawable/user"
            android:hint="@string/editTextTextPersonName"
            android:padding="17dp"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="568dp"
            android:layout_marginEnd="42dp"
            android:backgroundTint="@color/hard_blue"
            android:drawableLeft="@drawable/ic_baseline_chevron_right_24"
            android:fontFamily="monospace"
            android:hint="SIGUIENTE"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/hard_blue"
            app:icon="@drawable/ic_baseline_chevron_right_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:rippleColor="@color/hard_blue">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText3"
            style="@style/formu"
            android:layout_marginTop="480dp"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="15dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText2"
            style="@style/formu"
            android:layout_marginTop="384dp"
            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
            android:drawablePadding="15dp"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText4"
            style="@style/formu"
            android:layout_marginTop="288dp"
            android:drawableLeft="@drawable/people"
            android:drawablePadding="15dp"
            android:hint="@string/apellido"
            android:inputType="text"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            style="@style/formu"
            android:layout_marginTop="192dp"
            android:drawableLeft="@drawable/people"
            android:drawablePadding="15dp"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nombre" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="Usuario"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            app:layout_constraintBottom_toTopOf="@+id/user"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="Nombre"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="Apellido"
            android:textColor="@color/hard_blue"
            android:textColorLink="@color/hard_blue"
            app:layout_constraintBottom_toTopOf="@+id/textInputEditText4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="Telefono"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            app:layout_constraintBottom_toTopOf="@+id/textInputEditText2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            android:text="Correo"
            android:textColor="@color/hard_blue"
            android:textColorHint="@color/hard_blue"
            app:layout_constraintBottom_toTopOf="@+id/textInputEditText3"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="208dp"
            android:layout_height="207dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton"
            app:srcCompat="@drawable/ic_circleconv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>